deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginxhello
  name: nginxhello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxhello
  template:
    metadata:
      labels:
        app: nginxhello
    spec:
      containers:
        - image: docker.io/monkalways/todo-list:1.0.7 # {"$imagepolicy": "default:nginxhello"}
          name: nginxhello
          ports:
            - containerPort: 80
          livenessProbe:
            initialDelaySeconds: 2
            periodSeconds: 2
            httpGet:
              port: 80
              path: /
          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 2
            httpGet:
              port: 80
              path: /
