deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginxhello
  name: nginxhello
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginxhello
