deploy/ingress.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata: 
      labels:
        app: nginxhello
      name: single-default-backend-ingress
      annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
        kubernetes.io/ingress.class: “nginx”
spec:  
  ingressClassName: nginx
  rules:
    - http:
        paths: 
        - path: /hello-world
          pathType: Prefix
          backend:
            service: 
              name: nginxhello
              port:  
                number: 80
